# ComfyUI-Background-Edit

./: .gitignore  LICENSE  README.md  __init__.py  depth_background_blur.py  pyproject.toml  requirements.txt
examples/: realtime-depth-bg-blur-workflow.json
nodes/: background_color.py  composite.py  gaussian_blur.py
